<resources>
    <string name="app_name">Submission Android Jetpack Pro</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="movies">Movies</string>
    <string name="hello">Hello</string>
    <string name="tv_show">TV Show</string>
    <string name="description">Description</string>
    <string name="watch">Watch It</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="settings">Settings</string>
    <string name="no_fav">Anda Belum menambahkan Favorite</string>
    <string name="fav_movie">Favorite Movie</string>
    <string name="fav_show">Favorite Tv Show</string>
    <string name="favorite">Favorite</string>
    <string name="favorite_movie">Favorite Movie</string>
    <string name="favorite_tv_show">Favorite Tv Show</string>
    <string name="register">Register</string>
    <string name="registered">Registered</string>
    <string name="released">Released</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">login</string>
    <string name="no_data">NO data</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="fill_email">Fill the email</string>
    <string name="fill_password">Fill the password</string>
    <string name="not_valid_email">Email Not Valid</string>
    <string name="not_valid_password">Password Not Valid</string>

</resources>