<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/setting"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/fav_movie"
        android:icon="@drawable/ic_baseline_movie_24"
        android:title="@string/favorite_movie"
        app:showAsAction="never"/>
    <item
        android:id="@+id/fav_tvShow"
        android:icon="@drawable/ic_baseline_tv_24"
        android:title="@string/favorite_tv_show"
        app:showAsAction="never"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/logOut"
        android:icon="@drawable/ic_baseline_logout_24"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>

</menu>